--- a/src/styles/editor/EditSectionPanel.css
+++ b/src/styles/editor/EditSectionPanel.css
@@ -13,6 +13,8 @@
       var(--editor-section-button-icon-size)
   );
   max-height: calc(100% - var(--editor-section-buttons-height));
+  flex: 1;
+  overflow: hidden;
 }
 
 .edit-section-panel h3 {
@@ -24,7 +26,8 @@
 }
 
 .edit-section-panel > div {
-  overflow: hidden;
+  flex: 1;
+  min-height: 0;
   display: flex;
   flex-direction: column;
 }
