style: setup print styles
The printing css style has been modified, so that when the user tries to
print the website, only the cv is downloaded.

--- a/src/styles/base/TextWithIcon.css
+++ b/src/styles/base/TextWithIcon.css
@@ -1,6 +1,6 @@
 .text-with-icon {
   display: flex;
-  align-items: center;
+  align-items: baseline;
   gap: 0.5em;
 }
 
@@ -10,3 +10,7 @@
   width: 1.1em;
   height: 1.1em;
 }
+
+/* .text-with-icon {
+  vertical-align: center;
+} */
