style: add style for dark theme
The dark themeis specifyed and could be applied by adding a .dark-theme
class to any div of the webpage (although the latter functionality is
not implemented, yet).

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,10 +1,13 @@
 header {
   background-color: var(--header-bg-col);
   padding: var(--page-padding);
+  box-shadow: var(--box-shadow);
+  z-index: 10;
 }
 
 header h1 {
   font-size: var(--h1-fontsize);
   font-family: var(--h1-font);
   font-weight: bold;
+  color: var(--h1-color);
 }
