--- a/src/index.css
+++ b/src/index.css
@@ -50,14 +50,20 @@ body {
 }
 
 #root {
+  overflow: hidden;
+}
+
+#root,
+.app-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   flex: 1;
   width: 100%;
+  min-height: 0;
 }
 
-#root > * {
+.app-container > * {
   max-width: 100%;
   width: 100%;
   margin: 0 auto;
