--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -3,6 +3,10 @@ header {
   padding: var(--page-padding);
   box-shadow: var(--box-shadow);
   z-index: 10;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 header h1 {
@@ -10,4 +14,69 @@ header h1 {
   font-family: var(--h1-font);
   font-weight: bold;
   color: var(--h1-color);
+}
+
+header .group-of-btns {
+  display: flex;
+  justify-content: flex-end;
+  gap: 0.5em;
+}
+
+header .functionality-btn {
+  color: var(--header-btn-col);
+  background-color: var(--header-btn-bg-col);
+
+  opacity: var(--round-btn-opacity);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: calc(var(--round-btn-padding) / 2);
+  border-radius: 50%;
+  aspect-ratio: 1;
+
+  border: none;
+}
+header .functionality-btn span,
+header .functionality-btn svg {
+  width: var(--round-btn-size);
+  height: var(--round-btn-size);
+}
+
+/* when hover is supported */
+@media not all and (hover: none) {
+  header .functionality-btn:hover {
+    opacity: 1 !important;
+    box-shadow: var(--box-shadow);
+  }
+  header .functionality-btn:hover span {
+    transform: scale(1.1);
+  }
+  header .dark-theme-btn:hover {
+    background-color: var(--dark-theme-btn-hightlight-bg-col);
+    color: var(--dark-theme-btn-hightlight-col);
+    box-shadow: 0 0px var(--box-shadow-blur) var(--box-shadow-spread)
+      var(--dark-theme-btn-hightlight-box-shadow-col) inset;
+  }
+}
+
+header .functionality-btn:active {
+  opacity: 1 !important;
+  box-shadow: var(--box-shadow);
+}
+header .functionality-btn:active span {
+  transform: scale(1);
+}
+header .dark-theme-btn:active {
+  background-color: var(--dark-theme-btn-hightlight-bg-col);
+  color: var(--dark-theme-btn-hightlight-col);
+  box-shadow: 0 0px var(--box-shadow-blur) var(--box-shadow-spread)
+    var(--dark-theme-btn-hightlight-box-shadow-col) inset;
+}
+
+header .functionality-btn:focus {
+  outline: none;
+}
+
+header .functionality-btn:focus-visible {
+  outline: 2px solid var(--round-btn-color);
 }
