--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -61,6 +61,7 @@ main .functionality-btn {
   padding: var(--round-btn-padding);
   border-radius: 50%;
   aspect-ratio: 1;
+  border: none;
 }
 main .functionality-btn span,
 main .functionality-btn svg {
