feat(form): add spaces between group of inputs

--- a/src/styles/editor/EditSectionPanel.css
+++ b/src/styles/editor/EditSectionPanel.css
@@ -44,3 +44,7 @@
   border-top: 2px solid var(--editor-bg-col);
   border-bottom: 2px solid var(--editor-bg-col);
 }
+
+.edit-section-panel form .form-divider {
+  height: 1.4em;
+}
