--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -143,7 +143,7 @@
   --preview-page-padding: 5cqw;
   --preview-page-gap: 3cqw;
 
-  --preview-page-accent-color: rgb(158, 11, 114);
+  /* --preview-page-accent-color: rgb(158, 11, 114); */
   --preview-page-white: white;
 
   --preview-main-text-color: var(--col-dark-1);
