feat(Main): add personalization state defining the preview page format
The personalization state defined in the Main component now contains
also the preview page format.

Note that the property influences both the PreviewPage component and the
DownloadButton component.

While not implemented yet, it will be possible to let the user chose
the format (a4 or letter).

--- a/src/styles/preview/PreviewPage.css
+++ b/src/styles/preview/PreviewPage.css
@@ -28,7 +28,7 @@
 
 /* --- PRINT STYLES --------------------------------- */
 @page {
-  /* size: A4; */
+  size: var(--preview-page-format);
   margin: 5% 0;
 }
 
@@ -42,8 +42,12 @@
   body,
   body * {
     -webkit-print-color-adjust: exact;
-    color-adjust: exact;
+    print-color-adjust: exact;
     visibility: hidden;
+  }
+
+  .print-btn {
+    visibility: hidden !important;
   }
 
   /* hide scrollbars when saving pdf*/
