--- a/src/styles/preview/previewPanelWithListAndDates.css
+++ b/src/styles/preview/previewPanelWithListAndDates.css
@@ -5,8 +5,8 @@
 }
 
 .preview-panel-with-list-and-dates h3 {
-  border-bottom: 2px solid var(--preview-secondary-text-color);
-  color: var(--preview-main-text-color);
+  border-bottom: 2px solid var(--preview-text-color);
+  color: var(--preview-heading-text-color);
   font-size: var(--preview-panel-title-fontsize);
   font-weight: bold;
 }
