feat(Main): add personalization state defining the preview page main font
Altough not implemented yet, this will allow the user to change the
font used in the preview page.

Both the CSS variable used to set the font in the .preview-page page and
the fonts to be included in the exported pdf (through the Download
Button) are now set based on this state variable.

--- a/src/styles/preview/PreviewPage.css
+++ b/src/styles/preview/PreviewPage.css
@@ -10,7 +10,7 @@
   container-name: preview-page;
 
   color: var(--preview-heading-text-color);
-  font-family: var(--page-font);
+  font-family: var(--preview-page-main-font);
   letter-spacing: -0.0005em; /* fix for letter spacing when using jsPdf */
 }
 
