--- a/src/styles/preview/previewPanelWithListAndDates.css
+++ b/src/styles/preview/previewPanelWithListAndDates.css
@@ -7,6 +7,7 @@
 .preview-panel-with-list-and-dates h3 {
   border-bottom: 2px solid var(--preview-text-color);
   color: var(--preview-heading-text-color);
+  font-family: var(--preview-page-heading-font);
   font-size: var(--preview-panel-title-fontsize);
   font-weight: bold;
 }
