style: minor style improvements

--- a/src/styles/base/InputWithLabel.css
+++ b/src/styles/base/InputWithLabel.css
@@ -1,7 +1,7 @@
 .input-with-label {
   display: flex;
   gap: var(--label-input-gap);
-  align-items: baseline;
+  align-items: center;
 }
 
 .input-with-label label {
