feat(CreditFooter): add CreditFooter component
This component is just a footer with a link to my Github page.

It has been inserted in the App component.

--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -4,10 +4,12 @@ main {
   flex-direction: row;
   overflow-y: hidden;
   overflow-x: auto;
+  min-height: 0;
 }
 
 main .preview-panel {
   flex: 1;
+  min-height: 0;
 }
 
 /* Modify layout when base layout has overflow */
