--- a/src/styles/preview/PreviewPage.css
+++ b/src/styles/preview/PreviewPage.css
@@ -1,10 +1,11 @@
 .preview-page {
   background-color: var(--preview-page-bg-col);
   box-shadow: var(--box-shadow);
-  height: 100%;
 
+  height: 100%;
+  padding: 0 0 5%;
   aspect-ratio: var(--preview-page-ar);
-  overflow: visible;
+  overflow: hidden auto;
 
   container-type: inline-size;
   container-name: preview-page;
@@ -14,10 +15,15 @@
 }
 
 /* show top/bottom padding when not saving pdf (otherwise, this is already included when saving into pdf) */
-.preview-page:not(.printing) {
-  padding: 5% 0;
-  padding-top: 0;
-  overflow: hidden auto;
+.preview-page.printing {
+  height: auto;
+  max-height: none;
+  padding: 0;
+  aspect-ratio: auto;
+  overflow: hidden visible;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 /* hide scrollbars when saving pdf*/
